# SDL3pp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  amalgamate.js  changelog.md  jest.config.ts  jsconfig.json  package-lock.json  package.json  refresh.js  refresh.sh  todo.md  transformation.md  tsconfig.json
.github/workflows/: cmake-multi-platform.yml  static.yml
amalgamation/SDL3pp/: SDL3pp.h  SDL3pp_main.h  SDL3pp_vulkan.h
cmake/: SDL3ppAddExternalProjects.cmake  SDL3ppConfig.cmake.in  SDL3ppGenHeaders.cmake
custom-overlay/sdl3pp/: portfile.cmake  usage  vcpkg.json
docs/: ApiByCategory.dox  ApiByCategory.h  DesignNotes.dox  Doxyfile  DoxygenLayout.xml  README.md  Resource.h  callback.md  constructor-tag.md  transformation.md
docs/html/: ApiByCategory.html  ApiByCategory_8dox.html  ApiByCategory_8h.html  ApiByCategory_8h_source.html  DesignNotes.html  DesignNotes_8dox.html  README_8md.html  Resource_8h.html  Resource_8h_source.html  Resource_8md.html  SDL3pp_8h.html  SDL3pp_8h__incl.map  SDL3pp_8h__incl.md5  SDL3pp_8h_source.html  SDL3pp__assert_8h.html  SDL3pp__assert_8h__dep__incl.map  SDL3pp__assert_8h__dep__incl.md5  SDL3pp__assert_8h__incl.map  SDL3pp__assert_8h__incl.md5  SDL3pp__assert_8h_source.html  SDL3pp__asyncio_8h_source.html  SDL3pp__atomic_8h_source.html  SDL3pp__audio_8h_source.html  SDL3pp__bits_8h_source.html  SDL3pp__blendmode_8h.html  SDL3pp__blendmode_8h.js  SDL3pp__blendmode_8h__dep__incl.map  SDL3pp__blendmode_8h__dep__incl.md5  SDL3pp__blendmode_8h__incl.map  SDL3pp__blendmode_8h__incl.md5  SDL3pp__blendmode_8h_source.html  SDL3pp__callbackWrapper_8h.html  SDL3pp__callbackWrapper_8h.js  SDL3pp__callbackWrapper_8h__dep__incl.map  SDL3pp__callbackWrapper_8h__dep__incl.md5  SDL3pp__callbackWrapper_8h__incl.map  SDL3pp__callbackWrapper_8h__incl.md5  SDL3pp__callbackWrapper_8h_source.html  SDL3pp__camera_8h_source.html  SDL3pp__clipboard_8h_source.html  (+2284 more)
examples/: CMakeLists.txt  environment_list.cpp  locale_list.cpp  main_class.cpp  open_url.cpp  system_info.cpp  template.cpp  window_with_renderer.cpp  window_with_surface.cpp
examples/asyncio/: 01_load_bitmaps.cpp
examples/audio/: 01-simple-playback.cpp  01_simple-playback.cpp  02-simple-playback-callback.cpp  02_simple-playback-callback.cpp  03_load-wav.cpp  04_multiple-streams.cpp
examples/camera/: 01-read-and-draw.cpp
examples/demo/: 01_snake.cpp
examples/demo_plus/: 01_text.cpp  02_hexedit.cpp
examples/legacy/demo_plus/: 02_hexedit.cpp
examples/legacy/misc/: 01_open_url.cpp
examples/legacy/renderer/: 02_primitives.cpp  03_lines.cpp  06_textures.cpp  07_streaming_textures.cpp  11_color_mods.cpp  14_viewport.cpp
examples/misc/: 01_open_url.cpp  02_system_info.cpp  03_environment_list.cpp
examples/new/: template.cpp  window_with_renderer.cpp  window_with_surface.cpp
examples/new/demo/: 01_snake.cpp
examples/new/demo_plus/: 01_text.cpp  02_hexedit.cpp
examples/new/misc/: 03_environment_list.cpp
examples/new/renderer/: 14_viewport.cpp  15_cliprect.cpp
examples/renderer/: 01_clear.cpp  02_primitives.cpp  03_lines.cpp  04_points.cpp  05_rectangles.cpp  06_textures.cpp  07_streaming_textures.cpp  08_rotating_textures.cpp  09_scaling_textures.cpp  10_geometry.cpp  11_color_mods.cpp  14_viewport.cpp  15_cliprect.cpp  17_read_pixels.cpp  18_debug_text.cpp
examples/ttf/: 01_showfont.cpp
include/SDL3pp/: SDL3pp.h  SDL3pp_assert.h  SDL3pp_asyncio.h  SDL3pp_atomic.h  SDL3pp_audio.h  SDL3pp_bits.h  SDL3pp_blendmode.h  SDL3pp_callbackWrapper.h  SDL3pp_camera.h  SDL3pp_clipboard.h  (+79 more)
scripts/: amalgamate.js  amalgamate.ts  applyFormat.sh  applyPatches.sh  base.json  config-source.json  config-source2.json  config-target-legacy.json  config-target.json  config.json  current.json  gen-source.js  gen-transform-legacy.js  gen-transform.js  generate.sh  index.js  parse.js  parse.sh  read-api.js  read-api.mjs  source.json  source2.json  takeSnapshot.sh  target.json  tokenize.js  transform-legacy.json  transform.js  transform.json  transform.sh  types.js  update-headers.js  update.js  utils.js  write-api.js
src/: index.js  main.js  parse-api.js  parse.js  tokenize.js  transform.js  types.js  update.js  utils.js
test/: CMakeLists.txt  SDL3pp.cpp  SDL3pp_audio.cpp  SDL3pp_callbackWrapper.cpp  SDL3pp_error.cpp  SDL3pp_events.cpp  SDL3pp_filesystem.cpp  SDL3pp_freeWrapper.cpp  SDL3pp_gpu.cpp  SDL3pp_guid.cpp  SDL3pp_image.cpp  SDL3pp_init.cpp  SDL3pp_intrin.cpp  SDL3pp_lockBase.cpp  SDL3pp_log.cpp  SDL3pp_main.cpp  SDL3pp_mixer.cpp  SDL3pp_objectWrapper.cpp  SDL3pp_ownPtr.cpp  SDL3pp_pixels.cpp  SDL3pp_platform.cpp  SDL3pp_power.cpp  SDL3pp_properties.cpp  SDL3pp_rect.cpp  SDL3pp_renderer.cpp  SDL3pp_resource.cpp  SDL3pp_stdinc.cpp  SDL3pp_stringParam.cpp  SDL3pp_strings.cpp  SDL3pp_surface.cpp  SDL3pp_thread.cpp  SDL3pp_time.cpp  SDL3pp_timer.cpp  SDL3pp_tray.cpp  SDL3pp_ttf.cpp  SDL3pp_version.cpp  SDL3pp_video.cpp  SDL3pp_window.cpp  callbackWrapper.cpp  doctest.cpp  (+7 more)
test/legacy/: SDL3pp_init.cpp  SDL3pp_misc.cpp  SDL3pp_resource.cpp  SDL3pp_surface.cpp  SDL3pp_system.cpp
test/unit/: SDL3pp_asyncio.cpp  SDL3pp_atomic.cpp  SDL3pp_bits.cpp  SDL3pp_blendmode.cpp  SDL3pp_clipboard.cpp  SDL3pp_cpuinfo.cpp  SDL3pp_dialog.cpp  SDL3pp_endian.cpp  SDL3pp_gamepad.cpp  SDL3pp_haptic.cpp  SDL3pp_hidapi.cpp  SDL3pp_init.cpp  SDL3pp_iostream.cpp  SDL3pp_joystick.cpp  SDL3pp_keyboard.cpp  SDL3pp_loadso.cpp  SDL3pp_locale.cpp  SDL3pp_messagebox.cpp  SDL3pp_mouse.cpp  SDL3pp_mutex.cpp  SDL3pp_optionalRef.cpp  SDL3pp_ownPtr.cpp  SDL3pp_process.cpp  SDL3pp_properties.cpp  SDL3pp_render.cpp  SDL3pp_spanRef.cpp  SDL3pp_vulkan.cpp
tests/: config-empty.json  config-functions.json  config-structs.json  config-structs_aliases.json  config-structs_extends.json  config-structs_resources.json  empty.json  functions.h  functions.json  parse.test.js  structs.h  structs.json  structs_aliases.h  structs_aliases.json  structs_extends.h  structs_extends.json  structs_resources.h  structs_resources.json  tokenize.test.js  transform.test.js  update.test.js  utils.test.js
(+341 files in other folders)
